--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@material-ui/core": "^4.12.1"
   }
 }
